Fix: Added questions as pointers to code blocks

--- a/assignment1/Assignment1.ipynb
+++ b/assignment1/Assignment1.ipynb
@@ -640,7 +640,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1fbc496f198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23743198>"
       ]
      },
      "execution_count": 8,
@@ -837,6 +837,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. Calculate the skewness of day minutes, i.e. column  '𝙳𝚊𝚢 𝙼𝚒𝚗𝚜'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -857,6 +864,13 @@
     "    return 3 * (_mean - _median)/(_stdev)\n",
     "    \n",
     "print('Skewness of \"day minutes\": {}'.format(skewness(churn, 'Day Mins')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. Then calculate the skewness of the Z-score standardized day minutes"
    ]
   },
   {
@@ -888,6 +902,8 @@
    "source": [
     "Since the z-score transformation is a linear transformation the skewness of the transformed sample set does not change.\n",
     "\n",
+    "c. Based on the skewness value, would you consider day minutes to be skewed or nearly perfectly symmetric?\n",
+    "\n",
     "The skewness score is small so the 'day minutes' data seems to be nearly perfectly symmetric. Visual inspection will corroborate our assumption"
    ]
   },
@@ -899,7 +915,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1fbc4cfa748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110c124e0>"
       ]
      },
      "execution_count": 18,
@@ -943,6 +959,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. Construct a normal probability plot of international minutes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -981,7 +1004,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the number of international minutes can never be less than zero, a perfectly normal dsitribution can not be achieved. Thos minutes that would - under normal dsitribution - be 'less than zero' end up collected in a bucket at zero minutes. This is also visible in the histogram."
+    "b. What is stopping this variable from being normally distributed?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the number of international minutes can never be less than zero, a perfectly normal dsitribution can not be achieved. Those minutes that would - under normal dsitribution - be 'less than zero' end up collected in a bucket at zero minutes. This is also visible in the histogram."
    ]
   },
   {
@@ -992,7 +1022,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1fbc6226f60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110b64080>"
       ]
      },
      "execution_count": 20,
@@ -1020,6 +1050,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "c. Construct a flag variable to deal with the situation in (b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can omit all data points where the number of minutes is zero."
    ]
   },
@@ -1037,9 +1074,16 @@
     }
    ],
    "source": [
-    "nonzero_intl_minutes=churn[churn['Intl Mins']!=0.0]['Intl Mins']\n",
+    "nonzero_intl_minutes=churn[churn['Intl Mins'] > 0]['Intl Mins']\n",
     "print(\"Number of samples with non-zero international minutes: {}\".\n",
     "     format(nonzero_intl_minutes.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d. Construct a normal probability plot of the derived variable nonzero international minutes. Comment on the normality."
    ]
   },
   {
@@ -1083,13 +1127,6 @@
    "source": [
     "The samples now appear to be vry close to a straight line on the probability plot. So we can conclude that the number of International Minutes is approximately normally dsitributed, provided that the number of International Minutes is more than 0."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
