Question 1 done and added clarifying text

--- a/assignment2/Assignment2.ipynb
+++ b/assignment2/Assignment2.ipynb
@@ -124,8 +124,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 1a"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +147,7 @@
        "Name: HHKEY, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,8 +158,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 1b\n",
+    "\n",
+    "When joining the dataframe <code>grouped_by_cluster</code> with the dataframe <code>cluster_names</code> we have to be mindful of the fact that there are some records in the original data where the cluster is marked with 0 for which there is no matching cluster name. So we can not immediately join on the index, but we need to join on the column <code>Nr</code>."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -236,272 +252,26 @@
        "      <td>1158</td>\n",
        "      <td>Settled In</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>1155</td>\n",
-       "      <td>Rustic Homesteaders</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>906</td>\n",
-       "      <td>Established Wealth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>893</td>\n",
-       "      <td>A Good Step Forward</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>823</td>\n",
-       "      <td>Good Family Life</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>646</td>\n",
-       "      <td>Bedrock America</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>532</td>\n",
-       "      <td>Secure Adults</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>487</td>\n",
-       "      <td>City Ties</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>483</td>\n",
-       "      <td>Buy American</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>392</td>\n",
-       "      <td>Traditional Times</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>380</td>\n",
-       "      <td>Unclassified</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>326</td>\n",
-       "      <td>Building a Family</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>326</td>\n",
-       "      <td>Lap of Luxury</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>318</td>\n",
-       "      <td>On Their Own</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>293</td>\n",
-       "      <td>Metro Singles</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>283</td>\n",
-       "      <td>Trying Metro Times</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>255</td>\n",
-       "      <td>Stars and Stripes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>224</td>\n",
-       "      <td>Middle Years</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>222</td>\n",
-       "      <td>Comfortable Times</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>193</td>\n",
-       "      <td>Difficult Times</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>181</td>\n",
-       "      <td>Successful Singles</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>170</td>\n",
-       "      <td>Metro Mix</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>169</td>\n",
-       "      <td>Struggling Metro Mix</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>149</td>\n",
-       "      <td>Trying Rural Times</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>140</td>\n",
-       "      <td>Domestic Duos</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>138</td>\n",
-       "      <td>Close-Knit Families</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>93</td>\n",
-       "      <td>Urban Up and Comers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>85</td>\n",
-       "      <td>Establishing Roots</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>72</td>\n",
-       "      <td>Urban Singles</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>71</td>\n",
-       "      <td>Books and New Recruits</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>55</td>\n",
-       "      <td>American Classics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>52</td>\n",
-       "      <td>Country Classics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>51</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>45</td>\n",
-       "      <td>Manufacturing USA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>34</td>\n",
-       "      <td>Building a Home Life</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>32</td>\n",
-       "      <td>University USA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Middle of the Road</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>18</td>\n",
-       "      <td>Anomalies</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>14</td>\n",
-       "      <td>The Mature Years</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Living Off The Land</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Young and Carefree</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Hard Years</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          HHKEY                   Label\n",
-       "CLUSTYPE                               \n",
-       "10         3488         Home Sweet Home\n",
-       "1          2716             Upper Crust\n",
-       "4          2284        Mid-Life Success\n",
-       "16         1893   Country Home Families\n",
-       "8          1430      Movers and Shakers\n",
-       "15         1327        Great Beginnings\n",
-       "11         1301             Family Ties\n",
-       "18         1224      White Picket Fence\n",
-       "5          1219    Prosperous Metro Mix\n",
-       "23         1158              Settled In\n",
-       "38         1155     Rustic Homesteaders\n",
-       "3           906      Established Wealth\n",
-       "12          893     A Good Step Forward\n",
-       "6           823        Good Family Life\n",
-       "25          646         Bedrock America\n",
-       "20          532           Secure Adults\n",
-       "24          487               City Ties\n",
-       "35          483            Buy American\n",
-       "22          392       Traditional Times\n",
-       "50          380            Unclassified\n",
-       "28          326       Building a Family\n",
-       "2           326           Lap of Luxury\n",
-       "39          318            On Their Own\n",
-       "32          293           Metro Singles\n",
-       "40          283      Trying Metro Times\n",
-       "17          255       Stars and Stripes\n",
-       "14          224            Middle Years\n",
-       "7           222       Comfortable Times\n",
-       "46          193         Difficult Times\n",
-       "13          181      Successful Singles\n",
-       "36          170               Metro Mix\n",
-       "45          169    Struggling Metro Mix\n",
-       "42          149      Trying Rural Times\n",
-       "30          140           Domestic Duos\n",
-       "41          138     Close-Knit Families\n",
-       "37           93     Urban Up and Comers\n",
-       "29           85      Establishing Roots\n",
-       "48           72           Urban Singles\n",
-       "34           71  Books and New Recruits\n",
-       "21           55       American Classics\n",
-       "31           52        Country Classics\n",
-       "0            51                     NaN\n",
-       "43           45       Manufacturing USA\n",
-       "9            34    Building a Home Life\n",
-       "47           32          University USA\n",
-       "27           25      Middle of the Road\n",
-       "49           18               Anomalies\n",
-       "26           14        The Mature Years\n",
-       "33           13     Living Off The Land\n",
-       "19           11      Young and Carefree\n",
-       "44            4              Hard Years"
+       "          HHKEY                  Label\n",
+       "CLUSTYPE                              \n",
+       "10         3488        Home Sweet Home\n",
+       "1          2716            Upper Crust\n",
+       "4          2284       Mid-Life Success\n",
+       "16         1893  Country Home Families\n",
+       "8          1430     Movers and Shakers\n",
+       "15         1327       Great Beginnings\n",
+       "11         1301            Family Ties\n",
+       "18         1224     White Picket Fence\n",
+       "5          1219   Prosperous Metro Mix\n",
+       "23         1158             Settled In"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +280,7 @@
     "cluster_names = pd.read_html('Lifestyle.htm')[0]\n",
     "cluster_names = cluster_names.set_index('Nr')\n",
     "grouped_by_cluster = grouped_by_cluster.join(cluster_names)\n",
-    "grouped_by_cluster[['HHKEY', 'Label']].sort_values(by=['HHKEY'], ascending = False)"
+    "grouped_by_cluster[['HHKEY', 'Label']].sort_values(by=['HHKEY'], ascending = False).head(10)"
    ]
   },
   {
