completed the last question

--- a/assignment2/Assignment2.ipynb
+++ b/assignment2/Assignment2.ipynb
@@ -857,7 +857,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a28171518>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a27dbd358>"
       ]
      },
      "execution_count": 11,
@@ -903,7 +903,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2825a9e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a27f0fb00>"
       ]
      },
      "execution_count": 12,
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "1     0.152472  0.448524"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,16 +1159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a287a4a20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a24e10a20>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1192,16 +1192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a28904128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110f24400>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1239,11 +1239,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chi-square test of independence of variables in a contingency table. This function computes the chi-square statistic and p-value for the hypothesis test of independence of the observed frequencies in the contingency table observed. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "stat, p, dof, expected  = stats.chi2_contingency(pd.crosstab(df.RESP, df.WEB))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value of the Chi-square test is 4.4905961996028165e-167\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('p-value of the Chi-square test is {}'.format(p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "p-value value is less than 0.05 so we reject the null hypothesis that the columns WEB and RESP are independant."
+   ]
   },
   {
    "cell_type": "code",
