--- a/assignment3/Assignment3.ipynb
+++ b/assignment3/Assignment3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "((1052, 12), (43, 13))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "909              Henry Dunant , Peace, 1901  1901  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "(142, 12)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "Name: flag_country_check, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "2  Vladimir Prelog *,  born in then  Austria–Hung...  1975                   1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "2  Vladimir Prelog *,  born in then  Austria–Hung...  1975                   1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "919                   0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "(874, 13)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "919  1911                   0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
        "Name: category, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
        "820                   1  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
        "989                    1  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
        "(865, 13)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
        "782            NaN  Hiroshi Amano , Physics, 2014  2014                   0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
        "(43, 13)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -1783,17 +1783,17 @@
        "<Figure size 432x288 with 0 Axes>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a21af34a8>]"
+       "[<matplotlib.lines.Line2D at 0x1a291ca470>]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1803,7 +1803,7 @@
        "Text(0.5, 0, 'Number of Components')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1813,7 +1813,7 @@
        "Text(0, 0.5, 'Variance (%)')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1823,7 +1823,7 @@
        "Text(0.5, 1.0, 'JudgeRatings Dataset Explained Variance')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -1867,17 +1867,17 @@
        "<Figure size 432x288 with 0 Axes>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a21c67ef0>]"
+       "[<matplotlib.lines.Line2D at 0x1a291ecba8>]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1887,7 +1887,7 @@
        "Text(0.5, 0, 'Component')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1897,7 +1897,7 @@
        "Text(0, 0.5, 'Eigenvalue')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1907,7 +1907,7 @@
        "Text(0.5, 1.0, 'JudgeRatings Dataset Eigenvalues')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -2203,19 +2203,20 @@
        "RTEN -0.221390 -0.756459 -0.249933  0.285514 -0.080268  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weight_pca=pd.DataFrame(pca1.components_.T,columns=['PC_{}'.format(i) for i in range(1, pca1.n_components_+1)],index=X.columns)\n",
+    "weight_pca=pd.DataFrame(pca1.components_.T,columns=['PC_{}'.format(i) for i in range(1, pca1.n_components_+1)],\n",
+    "                        index=X.columns)\n",
     "weight_pca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2469,7 @@
        "RTEN  -0.00  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,6 +2494,13 @@
    "source": [
     "Based on the matrix, PC 1 is highly correlated with predictors relative to other components This also supports the stated variance, as PC 1 can explain approximately 85 percent of the variance in the dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
